--- a/src/main/resources/com/ieuapp/dashboard.fxml
+++ b/src/main/resources/com/ieuapp/dashboard.fxml
@@ -1,37 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-  Copyright (c) 2015, 2019, Gluon and/or its affiliates.
-  All rights reserved. Use is subject to license terms.
-
-  This file is available and licensed under the following license:
-
-  Redistribution and use in source and binary forms, with or without
-  modification, are permitted provided that the following conditions
-  are met:
-
-  - Redistributions of source code must retain the above copyright
-    notice, this list of conditions and the following disclaimer.
-  - Redistributions in binary form must reproduce the above copyright
-    notice, this list of conditions and the following disclaimer in
-    the documentation and/or other materials provided with the distribution.
-  - Neither the name of Oracle Corporation nor the names of its
-    contributors may be used to endorse or promote products derived
-    from this software without specific prior written permission.
-
-  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-  A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-  OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-  LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-  DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-  THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--->
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -40,7 +8,6 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TreeView?>
@@ -52,91 +19,74 @@
 <?import javafx.scene.text.Font?>
 
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ieuapp.Controller">
-  <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem mnemonicParsing="false" onAction="#onNewProjectButtonClicked" text="New Project" />
-            <MenuItem mnemonicParsing="false" onAction="#onOpenButtonClicked" text="Open Project" />
-              <MenuItem mnemonicParsing="false" text="Close Project" onAction="#onCloseButtonClicked" />
-              <SeparatorMenuItem mnemonicParsing="false" />
-              <MenuItem mnemonicParsing="false" onAction="#onCreateConfigButtonClicked" text="Create Config" />
-              <MenuItem mnemonicParsing="false" onAction="#onEditConfigButtonClicked" text="Edit Config" />
-              <MenuItem mnemonicParsing="false" onAction="#onExportConfigButtonClicked" text="Export Config" />
-              <MenuItem mnemonicParsing="false" onAction="#onDeleteConfigButtonClicked" text="Delete Config" />
-              <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" onAction="#onQuitButtonClicked" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Help">
-          <items>
-            <MenuItem mnemonicParsing="false" text="About " onAction="#onAboutClicked" />
-            <MenuItem mnemonicParsing="false" text="User Manual" onAction="#onUserManualClicked" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
-    <SplitPane fx:id="splitPane" dividerPositions="0.2, 0.7506" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <items>
-        <TreeView fx:id="treeView" prefHeight="551.0" prefWidth="264.0" SplitPane.resizableWithParent="false"/>
+    <children>
+        <!-- Menü Bar -->
+        <MenuBar VBox.vgrow="NEVER">
+            <menus>
+                <Menu mnemonicParsing="false" text="File">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#onNewProjectButtonClicked" text="New Project" />
+                        <MenuItem mnemonicParsing="false" onAction="#onOpenButtonClicked" text="Open Project" />
+                        <MenuItem mnemonicParsing="false" text="Close Project" onAction="#onCloseButtonClicked" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" onAction="#onCreateConfigButtonClicked" text="Create Config" />
+                        <MenuItem mnemonicParsing="false" onAction="#onEditConfigButtonClicked" text="Edit Config" />
+                        <MenuItem mnemonicParsing="false" onAction="#onExportConfigButtonClicked" text="Export Config" />
+                        <MenuItem mnemonicParsing="false" onAction="#onDeleteConfigButtonClicked" text="Delete Config" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Quit" onAction="#onQuitButtonClicked" />
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="About " onAction="#onAboutClicked" />
+                        <MenuItem mnemonicParsing="false" text="User Manual" onAction="#onUserManualClicked" />
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
 
-            <TabPane fx:id="tabPane" prefHeight="551.0" prefWidth="487.0" tabClosingPolicy="ALL_TABS" tabDragPolicy="REORDER" tabMaxWidth="200" tabMinWidth="100">
-              <tabs>
-
-              </tabs>
+        <!-- Orta Bölüm: TreeView ve TabPane -->
+        <HBox spacing="10" VBox.vgrow="ALWAYS">
+            <TreeView fx:id="treeView" prefHeight="550.0" prefWidth="250.0" HBox.hgrow="NEVER"/>
+            <TabPane fx:id="tabPane" prefHeight="550.0" prefWidth="550.0" tabClosingPolicy="ALL_TABS" tabDragPolicy="REORDER">
+                <tabs>
+                    <!-- Tablar buraya eklenebilir -->
+                </tabs>
             </TabPane>
-            <BorderPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="551.0" prefWidth="196.0" SplitPane.resizableWithParent="false">
-               <center>
-                  <ScrollPane fitToHeight="true" minWidth="-Infinity" nodeOrientation="RIGHT_TO_LEFT" prefHeight="526.0" prefWidth="199.0" BorderPane.alignment="TOP_RIGHT">
-                     <content>
-                        <HBox alignment="TOP_RIGHT" prefHeight="524.0" prefWidth="195.0">
-                           <children>
-                              <VBox prefHeight="524.0" prefWidth="217.0" HBox.hgrow="ALWAYS">
-                                 <children>
-                                    <TableView fx:id="tableView" nodeOrientation="LEFT_TO_RIGHT" prefHeight="524.0" prefWidth="250.0" VBox.vgrow="ALWAYS" >
-                                     <placeholder >
-                                         <Label text="Open a project and then click 'Check' to see results of students." wrapText="true" prefWidth="125" />
-                                     </placeholder>
-                                     </TableView>
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
-                     </content>
-                  </ScrollPane>
-               </center>
-               <bottom>
-                  <HBox alignment="TOP_RIGHT" prefHeight="25.0" prefWidth="178.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <Button mnemonicParsing="false" prefHeight="11.0" prefWidth="52.0" text="Check" onAction="#onCheckButtonClicked">
-                           <HBox.margin>
-                              <Insets right="2.0" />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                  </HBox>
-               </bottom>
-            </BorderPane>
+        </HBox>
 
-      </items>
-    </SplitPane>
-    <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
-      <children>
-        <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
-          <font>
-            <Font size="11.0" fx:id="x3" />
-          </font>
-          <textFill>
-            <Color red="0.625" green="0.625" blue="0.625" fx:id="x4" />
-          </textFill>
-        </Label>
-        <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Label font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
-      </children>
-      <padding>
-        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-      </padding>
-    </HBox>
-  </children>
+        <!-- Alt Kısım: TableView ve 'Check' Butonu -->
+        <VBox spacing="10" VBox.vgrow="NEVER">
+            <TableView fx:id="tableView" VBox.vgrow="ALWAYS">
+                <placeholder>
+                    <Label text="Open a project and then click 'Check' to see results of students." wrapText="true" prefWidth="125" />
+                </placeholder>
+            </TableView>
+
+            <!-- Check Butonu -->
+            <HBox spacing="10" alignment="CENTER">
+                <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Check" onAction="#onCheckButtonClicked"/>
+            </HBox>
+        </VBox>
+
+        <!-- Durum Bilgisi -->
+        <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
+            <children>
+                <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
+                    <font>
+                        <Font size="11.0" fx:id="x3" />
+                    </font>
+                    <textFill>
+                        <Color red="0.625" green="0.625" blue="0.625" fx:id="x4" />
+                    </textFill>
+                </Label>
+                <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
+                <Label font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
+            </children>
+            <padding>
+                <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+            </padding>
+        </HBox>
+    </children>
 </VBox>
